fixed footer alignment

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -19,7 +19,7 @@ body, html {
     row-gap: 0;
     padding: 0;
     width: 100%;
-    height: 86vh;
+    height: 88vh;
     position: relative;
     margin-top: 5vh;
 }
@@ -112,8 +112,6 @@ body, html {
     grid-area: about;
     margin-right: 20%;
     margin-left: 30px;
-
-
 }
 
 .about img {
