--- a/css/blm.css
+++ b/css/blm.css
@@ -165,61 +165,6 @@ background-color: #F0EEE9;
 .goal {
     padding-left: 10%;
 }
-/*------------------------------- PREVIOUS DESIGN -------------------------------*/
-.previousDesign {
-    grid-area: previousDesign;
-    background-color: #F0EEE9;
-    height: fit-content;
-    padding: 0 20% 50px 20%; /* Top/Right/Bottom/Left */
-    display: flex;
-    flex-direction: column;
-}
-
-.previousDesign h3 {
-    font-weight: bold;
-}
-
-.oldImageContainer {
-    position: relative;
-    width: 100%;
-    height: 70vh;
-    margin-top: 20px;
-}
-
-.old1 {
-    position: absolute;
-    z-index: 2;
-    left: 0;
-    bottom: 0;
-    top: 0;
-    max-width: 100%;
-}
-
-.old2 {
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    left: 30%;
-    max-width: 100%;
-}
-
-@media (max-width: 980px){
-    .old2 {
-        left: 0
-    }
-}
-
-.old3 {
-    position: absolute;
-    bottom: 0;
-    z-index: 0;
-    right: 0;
-    top: 0;
-    max-width: 100%;
-}
-
-
-
 /*------------------------------- DESIGN PROCESS -------------------------------*/
 
 .designProcessContainer {
@@ -758,7 +703,7 @@ background-color: #F0EEE9;
 
 .line:after {
     content: "";
-    width: 105%;
+    width: 53%;
     height: 3px;
     position: absolute;
     background-color: black;
